feat: governify integration
New endpoints added for network initialization and get guarantee state. Also agreement set up endpoint has been updated.
